      for more information.

      \item \sQuote{Object not found} and \sQuote{Missing argument}
      errors now give a more accurate error context. Patch provided by
      Lionel Henry in \PR{18241}.

      \item The \code{@} operator is now an S3 generic. Based on
      contributions by Tomasz Kalinowski in \PR{18482}.

      \item \code{inherits(x, what)} now accepts values other than a
      simple character vector for argument \code{what}. A new generic,
      \code{nameOfClass()}, is called to resolve the class name from
      \code{what}. This supports experimenting with alternative object
      systems. Based on contributions by Tomasz Kalinowski in
      \PR{18485}.

      \item Detection of BLAS/LAPACK in use (\code{sessionInfo()}) with
      FlexiBLAS now reports the current backend.

      \item \code{subset.data.frame()} now warns about extraneous
      arguments, typically catching the use of \samp{=} instead of
      \samp{==} in the \code{subset} expression.

      \item Calling \code{a:b} when numeric \code{a} or \code{b} is longer
      than one may now be made into an error by setting environment variable
      \env{_R_CHECK_LENGTH_COLON_} to a true value, along the proposal in
      \PR{18419} by Henrik Bengtsson.

      \item \code{density(x, weights=*)} now warns if automatic bandwidth
      selection happens without using \code{weights}; new optional
      \code{warnWbw} may suppress the warning.  Prompted by Christoph
      Dalitz' \PR{18490} and its discussants.

      \item \code{rm(list = *)} is faster and more readable thanks to Kevin
      Ushey's \PR{18492}.

      \item The \code{plot.lm()} function no longer produces a normal
      Q-Q plot for GLMs. Instead it plots a half-normal Q-Q plot of the
      absolute value of the standardized deviance residuals.

      \item The \code{print.summary.glm()} function no longer shows summary
      statistics for the deviance residuals by default. The optional